--- a/.gitignore
+++ b/.gitignore
@@ -138,6 +138,7 @@ venv.bak/
 # mkdocs documentation
 /site
 
+*.json
 # mypy
 .mypy_cache/
 .dmypy.json
@@ -158,3 +159,13 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+ctote@ubuntu:~/dev/1$ cat .gitignore
+*.class
+
+# Package Files #
+*.war
+*.ear
+
+# IDEA config files
+.idea/
